--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -1,20 +1,23 @@
 <ion-tabs>
 
+  <app-ad></app-ad>
+
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="home">
+      <ion-icon name="musical-notes"></ion-icon>
+      <ion-label>랜덤노래방</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="favorites">
+      <ion-icon name="heart"></ion-icon>
+      <ion-label>즐겨찾기</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="settings">
+      <ion-icon name="menu"></ion-icon>
+      <ion-label>더 보기</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
+
