--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -16,6 +16,7 @@
     <ion-tab-button tab="settings">
       <ion-icon name="menu"></ion-icon>
       <ion-label>더 보기</ion-label>
+      <ion-badge>6</ion-badge>
     </ion-tab-button>
   </ion-tab-bar>
 
