--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -6,6 +6,27 @@
 
 <ion-content>
 
+  <h1>랜덤 노래방</h1>
+
+  <div>
+    <div>{{song?.title || '노래 제목'}}</div>
+    <div>{{song?.singer || '가수'}}</div>
+    <div>TJ {{song?.tjNumber || '0000'}}</div>
+  </div>
+
+  <button (click)="onClickGetRandomSong()" [disabled]="loading">🎰 다시 뽑기 🔄</button>
+  <ng-container *ngIf="loading">loading...</ng-container>
+  <br>
+  <br>
+  <button (click)="addToFavorites(song)" [disabled]="!song || loading">🎵 🎤 👩‍🎤 즐겨찾기에 추가 👨🏼‍🎤 🎤 🎶</button>
+
+  <div *ngIf="isSingingMode">
+    즐겨찾기 성공
+    😀😃😄😁😆😅😂🤣☺️😊😇🙂🙃😉😌😍🥰😘😗😙😚😋😛😝😜🤪🤨🧐🤓😎🤩
+    🕵️👩‍🎤🧑‍🎤👨🏼‍🎤👩🏻‍✈️🧑🏼‍🚀🧟‍♂️🧟🧟‍♀️💃🕺🏻👯‍♀️🤹‍♀️🥇💯🎬🎸🎺🎷🥁🎻🪕🎧🎤🚀🎢🌋
+    📲📸🎥📽🎞📺🎙📡💡💸💰💷💎❤️🧡💛🚗⛵️🏡🛩🏦🏡🏢🏰
+  </div>
+
 </ion-content>
 
 
