--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -14,8 +14,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="settings">
-      <ion-icon name="menu"></ion-icon>
-      <ion-label>더 보기</ion-label>
+      <ion-icon name="happy-outline"></ion-icon>
+      <ion-label>내 정보</ion-label>
       <ion-badge>6</ion-badge>
     </ion-tab-button>
   </ion-tab-bar>
