--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -5,6 +5,12 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">내 정보</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <ng-container *ngIf="authService.isNotLoggedIn$ | async">
     <div class="login-banner">
       <ion-button (click)="login()" expand="block">
@@ -24,11 +30,14 @@
         <ion-label>{{user.email}}</ion-label>
       </ion-item>
       <ion-item button (click)="logout()" [detailIcon]="false">
-        <ion-icon name="log-out-outline" slot="start"></ion-icon>
+<!--        <ion-icon name="exit-outline" slot="start"></ion-icon>-->
+<!--        <ion-icon name="log-out-outline" slot="start"></ion-icon>-->
+        <ion-icon name="sad-outline" slot="start"></ion-icon>
+<!--        <ion-icon name="hand-right-outline" slot="start"></ion-icon>-->
         <ion-label>로그아웃</ion-label>
       </ion-item>
-      <ion-item button (click)="logout()" [detailIcon]="false">
-        <ion-icon name="sad-outline" slot="start"></ion-icon>
+      <ion-item button (click)="delete(user)" [detailIcon]="false">
+        <ion-icon name="skull-outline" slot="start"></ion-icon>
         <ion-label>탈퇴하기</ion-label>
       </ion-item>
     </ion-list>
@@ -46,7 +55,8 @@
     <ion-item>
       <ion-icon name="information-circle-outline" slot="start"></ion-icon>
       <ion-label>앱 버전</ion-label>
-      <ion-note>{{version}}</ion-note>
+      <ion-note slot="end">v{{version}}</ion-note>
+<!--      <ion-icon name="reload-circle-outline" slot="end"></ion-icon>-->
     </ion-item>
   </ion-list>
 
