--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <app-ad></app-ad>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
+    <ion-tab-button tab="">
       <ion-icon name="musical-notes"></ion-icon>
       <ion-label>랜덤노래방</ion-label>
     </ion-tab-button>
