--- a/src/app/modules/favorites/favorites.page.scss
+++ b/src/app/modules/favorites/favorites.page.scss
@@ -27,3 +27,28 @@ ion-content {
     }
   }
 }
+
+.label-inner {
+  display: flex;
+  align-items: center;
+  .count {
+    width: 2.5em;
+    margin-right: .5em;
+    color: red;
+    text-align: center;
+    line-height: 1;
+    ion-icon {
+      font-size: 16px;
+    }
+    ion-text {
+      display: block;
+      font-size: 12px;
+    }
+  }
+  .texts {
+    flex-grow: 1;
+  }
+  .numbers {
+    flex-shrink: 0;
+  }
+}
