--- a/src/app/modules/favorites/favorites.page.html
+++ b/src/app/modules/favorites/favorites.page.html
@@ -68,8 +68,8 @@
                   </ion-text>
                 </div>
                 <div class="numbers">
-                  <ion-chip color="primary">
-                    <ion-label color="primary">TJ {{item.song.tjNumber}}</ion-label>
+                  <ion-chip class="chip-song-number tj">
+                    <ion-label>TJ {{item.song.tjNumber}}</ion-label>
                   </ion-chip>
                 </div>
               </div>
