--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -1,24 +1,34 @@
 <ion-content>
+<!--  <ng-container *ngIf="loading">loading...</ng-container>-->
 
   <div class="contents">
-    <h1>랜덤 노래방</h1>
+    <h1 class="app-title">랜덤노래방</h1>
 
     <div class="song" *ngIf="song">
       <ion-text>
-        <h2>{{song.title}}</h2>
+        <h2 class="title">{{song.title}}</h2>
       </ion-text>
       <ion-text color="medium">
-        <p>{{song.singer}}</p>
+        <p class="singer">{{song.singer}}</p>
       </ion-text>
-      <ion-chip color="primary">
-        <ion-label color="primary">TJ {{song?.tjNumber}}</ion-label>
+      <ion-chip class="chip-song-number tj lg">
+        <ion-label>TJ {{song?.tjNumber}}</ion-label>
+      </ion-chip>
+      <ion-chip class="chip-song-number gy lg">
+        <ion-label>GY 준비중</ion-label>
       </ion-chip>
     </div>
 
-    <button (click)="onClickGetRandomSong()" [disabled]="loading">🎰 다시 뽑기 🔄</button>
-    <ng-container *ngIf="loading">loading...</ng-container>
-    <br>
-    <br>
+    <ion-button color="dark"
+                size="large"
+                fill="clear"
+                shape="round"
+                class="btn-random"
+                (click)="onClickGetRandomSong()"
+                [disabled]="loading">
+      <ion-icon name="refresh" slot="icon-only"></ion-icon>
+    </ion-button>
+
     <ion-button color="danger"
                 size="large"
                 fill="clear"
@@ -26,16 +36,9 @@
                 class="btn-favorite"
                 (click)="addToFavorites(song)"
                 [disabled]="!song || loading">
-      <ion-icon name="heart-outline" slot="icon-only"></ion-icon>
-<!--      <ion-icon name="heart" slot="icon-only"></ion-icon>-->
+      <ion-icon *ngIf="!added" name="heart-outline" slot="icon-only"></ion-icon>
+      <ion-icon *ngIf="added" name="heart" slot="icon-only"></ion-icon>
     </ion-button>
-
-    <div *ngIf="isSingingMode">
-      즐겨찾기 성공
-      😀😃😄😁😆😅😂🤣☺️😊😇🙂🙃😉😌😍🥰😘😗😙😚😋😛😝😜🤪🤨🧐🤓😎🤩
-      🕵️👩‍🎤🧑‍🎤👨🏼‍🎤👩🏻‍✈️🧑🏼‍🚀🧟‍♂️🧟🧟‍♀️💃🕺🏻👯‍♀️🤹‍♀️🥇💯🎬🎸🎺🎷🥁🎻🪕🎧🎤🚀🎢🌋
-      📲📸🎥📽🎞📺🎙📡💡💸💰💷💎❤️🧡💛🚗⛵️🏡🛩🏦🏡🏢🏰
-    </div>
   </div>
 
 </ion-content>
