--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -16,7 +16,7 @@
     <ion-tab-button tab="settings">
       <ion-icon name="happy-outline"></ion-icon>
       <ion-label>내 정보</ion-label>
-      <ion-badge>6</ion-badge>
+<!--      <ion-badge>6</ion-badge>-->
     </ion-tab-button>
   </ion-tab-bar>
 
