--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,24 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.chip-song-number {
+
+  &.lg {
+    border-radius: 10em;
+    height: auto;
+    font-size: 18px;
+    padding: .75em 1em;
+    font-weight: 700;
+  }
+
+  &.tj {
+    background: rgba(orangered, .1);
+    color: rgba(orangered, 1);
+  }
+
+  &.gy {
+    //background: rgba(orangered, .1);
+    color: rgba(black, .4);
+  }
+}
