--- a/src/app/modules/favorites/favorites.page.html
+++ b/src/app/modules/favorites/favorites.page.html
@@ -50,7 +50,7 @@
 
       <ion-list *ngIf="list.length > 0; else emptyTemplate" class="list">
         <ion-item-sliding *ngFor="let item of list">
-          <ion-item>
+          <ion-item [attr.data-id]="item.songId">
             <ion-label class="ion-text-wrap">
               <div class="label-inner">
                 <div class="count">
@@ -76,7 +76,7 @@
             </ion-label>
           </ion-item>
           <ion-item-options side="end" (ionSwipe)="delete(item)">
-            <ion-item-option (click)="delete(item)" color="danger" expandable>
+            <ion-item-option (click)="delete(item)" [disabled]="deleteLoading" color="danger" expandable>
               삭제
             </ion-item-option>
           </ion-item-options>
