--- a/src/app/modules/favorites/favorites.page.html
+++ b/src/app/modules/favorites/favorites.page.html
@@ -33,22 +33,22 @@
 
   <ng-container *ngIf="authService.user$ | async">
     <!--todo error-->
-    <ng-container *ngIf="list$ | async as list">
-      <ng-template #emptyTemplate>
-        <div class="empty-data">
-          <div class="icons">
-            <ion-icon name="musical-notes"></ion-icon>
-            <ion-icon name="arrow-forward-outline"></ion-icon>
-            <ion-icon name="heart"></ion-icon>
-          </div>
-          <br>
-          <a [routerLink]="['/tabs/home']">랜덤노래방</a>에서 노래를 뽑아서
-          <br>
-          마음에 드는 노래를 즐겨찾기에 보관하세요!
+    <ng-template #emptyTemplate>
+      <div class="empty-data">
+        <div class="icons">
+          <ion-icon name="musical-notes"></ion-icon>
+          <ion-icon name="arrow-forward-outline"></ion-icon>
+          <ion-icon name="heart"></ion-icon>
         </div>
-      </ng-template>
+        <br>
+        <a [routerLink]="['/tabs/home']">랜덤노래방</a>에서 노래를 뽑아서
+        <br>
+        마음에 드는 노래를 즐겨찾기에 보관하세요!
+      </div>
+    </ng-template>
 
-      <ion-list *ngIf="list.length > 0; else emptyTemplate" class="list">
+    <ng-container *ngIf="list$ | async as list; else emptyTemplate">
+      <ion-list class="list">
         <ion-item-sliding *ngFor="let item of list">
           <ion-item [attr.data-id]="item.songId">
             <ion-label class="ion-text-wrap">
@@ -81,7 +81,6 @@
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
-
       </ion-list>
 
     </ng-container>
