--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -13,10 +13,15 @@
 
   <ng-container *ngIf="authService.isNotLoggedIn$ | async">
     <div class="login-banner">
-      <ion-button (click)="login()" expand="block">
+      <ion-button (click)="login()" expand="block" [disabled]="!enabledGoogle">
         <ion-icon name="logo-google" slot="start"></ion-icon>
         지메일로 로그인하기
       </ion-button>
+      <ng-container *ngIf="!enabledGoogle">
+        <ion-text color="warning" class="text-info">
+          <ion-icon name="information-circle"></ion-icon> 로그인하려면 사파리나 크롬 브라우저로 직접 접속해주세요
+        </ion-text>
+      </ng-container>
     </div>
   </ng-container>
 
