--- a/src/global.scss
+++ b/src/global.scss
@@ -25,8 +25,13 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-.chip-song-number {
+body {
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
+}
 
+.chip-song-number {
   &.lg {
     border-radius: 10em;
     height: auto;
